@@ -1,3 +1,7 @@
+105
+-- changed PREPROC to MODULE in profiling defines
+-- added --rule "<rule>" for easy command line testing
+
 104
 -- changed configure --with-libpcre-* to --with-pcre-* for consistency
 -- same for pcap (again!)
